src/test/ui/traits/trait-object-with-self-in-projection-output-bad.stderr
error[E0191]: the value of the associated type `Output` (from the trait `Base`) must be specified
  --> $DIR/trait-object-with-self-in-projection-output-bad.rs:20:17
   |
LL |     type Output;
   |     ------------ `Output` defined here
...
LL |     let _x: Box<dyn Helper<Target=i32>> = Box::new(2u32);
   |                 ^^^^^^^^^^^^^^^^^^^^^^ associated type `Output` must be specified

error: aborting due to previous error

For more information about this error, try `rustc --explain E0191`.
